Fix spacing in the Portfolio container

--- a/src/styles/desktop/Portfolio.scss
+++ b/src/styles/desktop/Portfolio.scss
@@ -3,7 +3,7 @@
 
 .projects-outter {
   width: 100%;
-  height: 6500px;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
